plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - port: 80
      targetPort: 32400
  type: ClusterIP
