plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: nginx 
  rules:
  - host: plex.localhome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port: 
              number: 80
